--- a/Login Page/index.html
+++ b/Login Page/index.html
@@ -7,22 +7,43 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-     <div class="container">
+    <div class="container">
         <header>
             <div class="logo">
                 <img src="ojt photos/SFgroup.png" alt="SF Group of Companies">
             </div>
+            <div class="partner-logos">
+                <div class="partner-logos-inner">
+                <img src="ojt photos/Geniustech.png" alt="Partner 1">
+                <img src="ojt photos/agrilogo2.png" alt="Partner 2">
+                <img src="ojt photos/farmtech.png" alt="Partner 3">
+                <img src="ojt photos/DJas.png" alt="Partner 4">
+                <img src="ojt photos/subang_farm.png" alt="Partner 5">
+                <img src="ojt photos/agri_online.png" alt="Partner 6">
+                <img src="ojt photos/sunfood.png" alt="Partner 7">
+                <img src="ojt photos/Geniustech.png" alt="Partner 1">
+                <img src="ojt photos/agrilogo2.png" alt="Partner 2">
+                <img src="ojt photos/farmtech.png" alt="Partner 3">
+                <img src="ojt photos/DJas.png" alt="Partner 4">
+                <img src="ojt photos/subang_farm.png" alt="Partner 5">
+                <img src="ojt photos/agri_online.png" alt="Partner 6">
+                <img src="ojt photos/sunfood.png" alt="Partner 7">
+            </div>
+        </div>
         </header>
-        <h1>SFGC Timekeeping System</h1>
-        <form action="/login" method="POST">
-            <div class="input-group">
-                <input type="text" name="employee_id" placeholder="Employee ID" required>
-            </div>
-            <div class="input-group">
-                <input type="password" name="pin" placeholder="Pin (4 Digits)" minlength="4" maxlength="4" required>
-            </div>
-            <button type="submit" class="login-button">Login</button>
-        </form>
+        <!-- New Container for Heading and Form -->
+        <div class="form-container">
+            <h1>SFGC Timekeeping System</h1>    
+            <form action="/login" method="POST">
+                <div class="input-group">
+                    <input type="text" name="employee_id" placeholder="Employee ID" required>
+                </div>
+                <div class="input-group">
+                    <input type="password" name="pin" placeholder="Pin (4 Digits)" minlength="4" maxlength="4" required>
+                </div>
+                <button type="submit" class="login-button">Login</button>
+            </form>
+        </div>
     </div>
 </body>
 </html>
